--- a/week03/src/index.html
+++ b/week03/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>게임 추천 캐러셀 컴포넌트</title>
+  <link rel="stylesheet" href="./styles/main.css" />
 </head>
 <body>
   <!-- 탐색 버튼 컴포넌트 -->
