feat: 추천 게임 링크 컴포넌트 스타일링 및 마크업 수정
- 접근성을 고려해 <div> -> <a>로 구조 변경 (index.html)
- <a> 요소 밑줄 제거 설정 추가 (reset.css)
- 임시 body margin 제거 (nav-button.css)
- 추천 게임 링크 컴포넌트 스타일링 (title-link.css)

--- a/week03/src/index.html
+++ b/week03/src/index.html
@@ -25,10 +25,15 @@
     </button>
   </div>
   <!-- 타이틀 링크 컴포넌트 -->
-  <div class="carousel__header">
-    <img src="/week03/assets/images/recommend-icon.png" alt="추천 게임" />
+  <a href="#" class="carousel__header">
     <span class="carousel__title">추천 게임</span>
-  </div>
+    <img src="/week03/assets/images/recommend-icon.png" alt="추천 게임" />
+    <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+      <path
+        d="M0.75621 0.751054C1.09793 0.416315 1.65182 0.416315 1.99354 0.751054L7.24364 5.89397C7.58535 6.22871 7.58535 6.77129 7.24364 7.10603L1.99354 12.2489C1.65182 12.5837 1.09793 12.5837 0.75621 12.2489C0.414495 11.9142 0.414495 11.3716 0.75621 11.0369L5.38765 6.5L0.75621 1.96312C0.414495 1.62838 0.414495 1.08579 0.75621 0.751054Z"
+        fill="#858585" />
+    </svg>
+  </a>
   <!-- 콘텐츠 링크 컴포넌트 -->
   <figure class="card">
     <img src="/week03/assets/images/crohno-odyssey.png" alt="게임 이미지" class="card__thumbnail" />
