--- a/week03/src/index.html
+++ b/week03/src/index.html
@@ -27,7 +27,7 @@
   <!-- 타이틀 링크 컴포넌트 -->
   <a href="#" class="carousel__header">
     <span class="carousel__title">추천 게임</span>
-    <img src="/week03/assets/images/recommend-icon.png" alt="추천 게임" />
+    <img src="/week03/assets/images/recommend-icon.png" alt="" />
     <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
       <path
         d="M0.75621 0.751054C1.09793 0.416315 1.65182 0.416315 1.99354 0.751054L7.24364 5.89397C7.58535 6.22871 7.58535 6.77129 7.24364 7.10603L1.99354 12.2489C1.65182 12.5837 1.09793 12.5837 0.75621 12.2489C0.414495 11.9142 0.414495 11.3716 0.75621 11.0369L5.38765 6.5L0.75621 1.96312C0.414495 1.62838 0.414495 1.08579 0.75621 0.751054Z"
@@ -36,7 +36,11 @@
   </a>
   <!-- 콘텐츠 링크 컴포넌트 -->
   <figure class="card">
-    <img src="/week03/assets/images/crohno-odyssey.png" alt="게임 이미지" class="card__thumbnail" />
+    <a href="#" class="card__link" aria-label="게임 이름 페이지 이동"></a>
+    <div class="card__image--wrapper">
+      <img src="/week03/assets/images/crohno-odyssey-background.png" alt="" aria-hidden="true" class="card__image--background" />
+      <img src="/week03/assets/images/crohno-odyssey-character.png" alt="" aria-hidden="true" class="card__image--character" />
+    </div>
     <figcaption>
       <h3 class="card__title">게임 이름</h3>
       <p class="card__description">게임 설명</p>
