feat: 캐러셀 컴포넌트 마크업 및 스타일링 완성
- index.html : 컴포넌트를 조립하여 캐러셀 구조 마크업 구성
- main.css : carousel.css import
- title-link.css : 정렬 속성 수정 (justify-content: center;)
- carousel.css : 캐러셀 및 페이지네이션 스타일링

--- a/week03/src/index.html
+++ b/week03/src/index.html
@@ -47,5 +47,138 @@
       <span class="card__genre">게임 장르</span>
     </figcaption>
   </figure>
+
+  <hr />
+
+  <section class="carousel">
+    <!-- 타이틀 링크 컴포넌트 -->
+     <a href="#" class="carousel__header">
+      <span class="carousel__title">추천 게임</span>
+      <img src="/week03/assets/images/recommend-icon.png" alt="" />
+      <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+        <path
+        d="M0.75621 0.751054C1.09793 0.416315 1.65182 0.416315 1.99354 0.751054L7.24364 5.89397C7.58535 6.22871 7.58535 6.77129 7.24364 7.10603L1.99354 12.2489C1.65182 12.5837 1.09793 12.5837 0.75621 12.2489C0.414495 11.9142 0.414495 11.3716 0.75621 11.0369L5.38765 6.5L0.75621 1.96312C0.414495 1.62838 0.414495 1.08579 0.75621 0.751054Z"
+        fill="#858585" />
+      </svg>
+    </a>
+    <!-- 콘텐츠 링크 컴포넌트 -->
+    <div class="carousel__viewport">
+      <div class="card__container">
+        <!-- 1 -->
+        <figure class="card">
+          <a href="#" class="card__link" aria-label="크로노 오디세이 페이지 이동"></a>
+          <div class="card__image--wrapper">
+            <img src="/week03/assets/images/crohno-odyssey-background.png" alt="" aria-hidden="true" class="card__image--background" />
+            <img src="/week03/assets/images/crohno-odyssey-character.png" alt="" aria-hidden="true" class="card__image--character" />
+          </div>
+          <figcaption>
+            <h3 class="card__title">크로노 오디세이</h3>
+            <p class="card__description">멈춰 있던 시간이 흐른다</p>
+            <span class="card__genre">MMORPG</span>
+          </figcaption>
+        </figure>
+        <!-- 2 -->
+        <figure class="card">
+          <a href="#" class="card__link" aria-label="아키에이지 워 페이지 이동"></a>
+          <div class="card__image--wrapper">
+            <img src="/week03/assets/images/archeage-war-background.png" alt="" aria-hidden="true"
+              class="card__image--background" />
+            <img src="/week03/assets/images/archeage-war-character.png" alt="" aria-hidden="true"
+              class="card__image--character" />
+          </div>
+          <figcaption>
+            <h3 class="card__title">아키에이지 워</h3>
+            <p class="card__description">시대의 전설을 향해</p>
+            <span class="card__genre">MMORPG</span>
+          </figcaption>
+        </figure>
+        <!-- 3 -->
+        <figure class="card">
+          <a href="#" class="card__link" aria-label="패스 오브 엑자일 2 페이지 이동"></a>
+          <div class="card__image--wrapper">
+            <img src="/week03/assets/images/path-of-exile-2-background.png" alt="" aria-hidden="true"
+              class="card__image--background" />
+            <img src="/week03/assets/images/path-of-exile-2-character.png" alt="" aria-hidden="true"
+              class="card__image--character" />
+          </div>
+          <figcaption>
+            <h3 class="card__title">패스 오브 엑자일 2</h3>
+            <p class="card__description">얼리 액세스 오픈!</p>
+            <span class="card__genre">핵앤슬래시</span>
+          </figcaption>
+        </figure>
+        <!-- 4 -->
+        <figure class="card">
+          <a href="#" class="card__link" aria-label="오딘 발할라 라이징 페이지 이동"></a>
+          <div class="card__image--wrapper">
+            <img src="/week03/assets/images/odin-background.png" alt="" aria-hidden="true"
+              class="card__image--background" />
+            <img src="/week03/assets/images/odin-charater.png" alt="" aria-hidden="true"
+              class="card__image--character" />
+          </div>
+          <figcaption>
+            <h3 class="card__title">오딘 : 발할라 라이징</h3>
+            <p class="card__description">신의 영역을 차지하라</p>
+            <span class="card__genre">MMORPG</span>
+          </figcaption>
+        </figure>
+        <!-- 5 -->
+        <figure class="card">
+          <a href="#" class="card__link" aria-label="리멤버 오브 마제스티 페이지 이동"></a>
+          <div class="card__image--wrapper">
+            <img src="/week03/assets/images/remember-of-majesty-background.png" alt="" aria-hidden="true"
+              class="card__image--background" />
+            <img src="/week03/assets/images/remember-of-majesty-character.png" alt="" aria-hidden="true"
+              class="card__image--character" />
+          </div>
+          <figcaption>
+            <h3 class="card__title">롬: 리멤버 오브 마제스티</h3>
+            <p class="card__description">세계는 하나의 전장이 된다</p>
+            <span class="card__genre">MMORPG</span>
+          </figcaption>
+        </figure>
+        <!-- 6 -->
+        <figure class="card">
+          <a href="#" class="card__link" aria-label="배틀그라운드 페이지 이동"></a>
+          <div class="card__image--wrapper">
+            <img src="/week03/assets/images/battlegrounds-background.png" alt="" aria-hidden="true"
+              class="card__image--background" />
+            <img src="/week03/assets/images/battlegrounds-charater.png" alt="" aria-hidden="true"
+              class="card__image--character" />
+          </div>
+          <figcaption>
+            <h3 class="card__title">배틀그라운드</h3>
+            <p class="card__description">최후까지 생존하라!</p>
+            <span class="card__genre">배틀로얄</span>
+          </figcaption>
+        </figure>
+      </div>
+    </div>
+    <!-- 탐색 버튼 컴포넌트 -->
+     <div class="carousel__controls">
+      <button type="button" class="carousel__button carousel__button--prev" aria-label="이전 탐색">
+        <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path
+          d="M8.20703 0.29297C7.81651 -0.0975548 7.18349 -0.0975548 6.79297 0.29297L0.792968 6.29297C0.402444 6.68349 0.402444 7.31651 0.792968 7.70703L6.79297 13.707C7.18349 14.0976 7.81651 14.0976 8.20703 13.707C8.59755 13.3165 8.59755 12.6835 8.20703 12.293L2.91406 7L8.20703 1.70703C8.59755 1.31651 8.59755 0.683494 8.20703 0.29297Z"
+          fill="#474747" />
+        </svg>
+      </button>
+      <!-- 페이지 -->
+      <div class="carousel__pagination">
+        <span class="carousel__pagination-current">1</span>
+        <span aria-hidden="true">/</span>
+        <span class="carousel__pagination-total">3</span>
+      </div>
+      <button type="button" class="carousel__button carousel__button--next" aria-label="다음 탐색">
+        <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path
+          d="M0.29297 0.29297C0.683494 -0.0975548 1.31651 -0.0975548 1.70703 0.29297L7.70703 6.29297C8.09756 6.68349 8.09756 7.31651 7.70703 7.70703L1.70703 13.707C1.31651 14.0976 0.683494 14.0976 0.29297 13.707C-0.0975548 13.3165 -0.0975548 12.6835 0.29297 12.293L5.58594 7L0.29297 1.70703C-0.0975548 1.31651 -0.0975548 0.683494 0.29297 0.29297Z"
+          fill="#474747" />
+        </svg>
+      </button>
+    </div>
+  </section>
+
+
 </body>
 </html>
