feat: 캐러셀에서 콘텐츠 2개씩 보이도록 기본 슬라이드 기능 구현

--- a/week03/src/index.html
+++ b/week03/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- 탐색 버튼 컴포넌트 -->
-  <div class="carousel__controls">
+  <!-- <div class="carousel__controls">
     <button type="button" class="carousel__button carousel__button--prev" aria-label="이전 탐색">
       <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
         <path
@@ -23,9 +23,9 @@
           fill="#474747" />
       </svg>
     </button>
-  </div>
+  </div> -->
   <!-- 타이틀 링크 컴포넌트 -->
-  <a href="#" class="carousel__header">
+  <!-- <a href="#" class="carousel__header">
     <span class="carousel__title">추천 게임</span>
     <img src="/week03/assets/images/recommend-icon.png" alt="" />
     <svg width="8" height="13" viewBox="0 0 8 13" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
@@ -33,9 +33,9 @@
         d="M0.75621 0.751054C1.09793 0.416315 1.65182 0.416315 1.99354 0.751054L7.24364 5.89397C7.58535 6.22871 7.58535 6.77129 7.24364 7.10603L1.99354 12.2489C1.65182 12.5837 1.09793 12.5837 0.75621 12.2489C0.414495 11.9142 0.414495 11.3716 0.75621 11.0369L5.38765 6.5L0.75621 1.96312C0.414495 1.62838 0.414495 1.08579 0.75621 0.751054Z"
         fill="#858585" />
     </svg>
-  </a>
+  </a> -->
   <!-- 콘텐츠 링크 컴포넌트 -->
-  <figure class="card">
+  <!-- <figure class="card">
     <a href="#" class="card__link" aria-label="게임 이름 페이지 이동"></a>
     <div class="card__image--wrapper">
       <img src="/week03/assets/images/crohno-odyssey-background.png" alt="" aria-hidden="true" class="card__image--background" />
@@ -46,7 +46,7 @@
       <p class="card__description">게임 설명</p>
       <span class="card__genre">게임 장르</span>
     </figcaption>
-  </figure>
+  </figure> -->
 
   <hr />
 
@@ -165,9 +165,9 @@
       </button>
       <!-- 페이지 -->
       <div class="carousel__pagination">
-        <span class="carousel__pagination-current">1</span>
+        <span class="carousel__pagination--current">1</span>
         <span aria-hidden="true">/</span>
-        <span class="carousel__pagination-total">3</span>
+        <span class="carousel__pagination--total">3</span>
       </div>
       <button type="button" class="carousel__button carousel__button--next" aria-label="다음 탐색">
         <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
@@ -178,5 +178,6 @@
       </button>
     </div>
   </section>
+  <script src="./script.js"></script>
 </body>
 </html>
