feat: index.html에 설명 문단(sub-text) 추가

--- a/week04/src/index.html
+++ b/week04/src/index.html
@@ -15,6 +15,11 @@
         <span>연습하지 않으면,</span>
         <span>누구나 발전하지 않는다.</span>
       </h1>
+      <p class="sub-text">
+        <span>실용적이고 짜임새 있는 실습 예제와</span>
+        <span>강의로 프론트엔드 개발 역량을</span>
+        <span>마음껏 확장해보세요.</span>
+      </p>
       <div class="cta-buttons">
         <a href="https://bootcamp.likelion.net/school/kdt-frontend-15th" target="_blank" rel="noopener noreferrer">프론트엔드 스쿨</a>
         <a href="https://bootcamp.likelion.net/" target="_blank" rel="noopener noreferrer">커리큘럼 보기</a>
