feat: index.html 상단에 '멋쟁이 사자처럼' 문구 추가

--- a/week04/src/index.html
+++ b/week04/src/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <main class="container">
+    <strong class="section-topic">멋쟁이 사자처럼</strong>
     <section class="text-area">
       <h1 class="main-text">
         <span>연습하지 않으면,</span>
