feat: GSAP 애니메이션 및 CTA 버튼 밑줄 효과 적용
- index.html : SVG 라인에 부여한 클래스 이름 수정
- style.css : SVG 라인 수정된 클래스으로 변경
- .cta-buttons a 요소에 가상 요소로 밑줄 애니메이션 추가
- script.js : GSAP 타임라인 애니메이션 구현
- script.js : CTA 버튼에 마우스 호버 시 확대 애니메이션 추가

--- a/week04/src/index.html
+++ b/week04/src/index.html
@@ -33,23 +33,23 @@
         <section class="visual-area">
           <!-- 가로 선 -->
           <div class="grid-lines">
-            <svg class="line line-horizontal" width="805" height="2" viewBox="0 0 805 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="line line-horizontal__1" width="805" height="2" viewBox="0 0 805 2" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M0 1L805 0.99993" stroke="#A2A0A0" stroke-opacity="0.5" />
             </svg>
-            <svg class="line line-horizontal" width="738" height="2" viewBox="0 0 738 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="line line-horizontal__2" width="738" height="2" viewBox="0 0 738 2" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M0.482056 0.825958H737.561" stroke="#A2A0A0" stroke-opacity="0.5" />
             </svg>
-            <svg class="line line-horizontal" width="774" height="2" viewBox="0 0 774 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="line line-horizontal__3" width="774" height="2" viewBox="0 0 774 2" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M0 1.47595L773.558 1.47595" stroke="#A2A0A0" stroke-opacity="0.5" />
             </svg>
             <!-- 세로 선 -->
-            <svg class="line line-vertical" width="2" height="993" viewBox="0 0 2 993" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="line line-vertical__1" width="2" height="993" viewBox="0 0 2 993" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M1.39075 0.5L1.39075 992.5" stroke="#A2A0A0" stroke-opacity="0.5" />
             </svg>
-            <svg class="line line-vertical" width="2" height="792" viewBox="0 0 2 792" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="line line-vertical__2" width="2" height="792" viewBox="0 0 2 792" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M1.24878 0L1.24878 791.5" stroke="#A2A0A0" stroke-opacity="0.5" />
             </svg>
-            <svg class="line line-vertical" width="2" height="820" viewBox="0 0 2 820" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="line line-vertical__3" width="2" height="820" viewBox="0 0 2 820" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M0.605835 0.903412L0.605835 819.755" stroke="#A2A0A0" stroke-opacity="0.5" />
             </svg>
           </div>
