chore: 접근성 관련 마크업 리팩토링

--- a/week04/src/index.html
+++ b/week04/src/index.html
@@ -29,7 +29,7 @@
           </div>
         </section>
       </div>
-      <div class="visual-area__wrapper">
+      <div class="visual-area__wrapper" aria-hidden="true">
         <section class="visual-area">
           <!-- 가로 선 -->
           <div class="grid-lines">
