--- a/week05/index.html
+++ b/week05/index.html
@@ -6,10 +6,24 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/week05/assets/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/week05/assets/favicon/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/week05/assets/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="manifest" href="/week05/assets/favicon/site.webmanifest">
   <title>Pastimer | 10분의 기다림을 즐겁게</title>
 </head>
 <body>
-  
+  <main class="home">
+    <h1 class="home__title">🍝 Pastimer</h1>
+    <p class="home__description">
+      <span>파스타 면을 삶는 동안</span>
+      <span>지루하지 않게 기다려볼까요?</span>
+    </p>
+    <section class="home__options">
+      <div class="time__options">
+        <button class="time__options-button" type="button" data-time="8">8분</button>
+        <button class="time__options-button" type="button" data-time="10">10분</button>
+        <button class="time__options-button" type="button" data-time="12">12분</button>
+      </div>
+      <button class="start__button" type="button" disabled>타이머 시작</button>
+    </section>
+  </main>
 </body>
 </html>
