feat: 시간 버튼 클릭 시 선택된 시간 저장 및 시작 버튼 활성화 기능 추가

--- a/week05/index.html
+++ b/week05/index.html
@@ -26,11 +26,11 @@
       </p>
       <section class="home__options">
         <div class="time__options">
-          <button class="time__options-button is-selected" type="button" data-time="8">8분</button>
+          <button class="time__options-button" type="button" data-time="8">8분</button>
           <button class="time__options-button" type="button" data-time="10">10분</button>
           <button class="time__options-button" type="button" data-time="12">12분</button>
         </div>
-        <button class="start__button active" type="button" disabled>타이머 시작</button>
+        <button class="start__button" type="button" disabled>타이머 시작</button>
       </section>
     </section>
 
