--- a/week05/index.html
+++ b/week05/index.html
@@ -39,16 +39,16 @@
         <p class="timer__label">⏰ 남은 시간</p>
         <p class="timer__time" aria-live="polite">10:00</p>
       </div>
-      <section class="quiz">
-        <h2 class="quiz__question">아일랜드의 수도는?</h2>
+      <div class="quiz__wrapper">
+        <h2 class="quiz__question">퀴즈 질문</h2>
         <div class="quiz__options">
-          <button type="button" class="quiz__option">에든버러</button>
-          <button type="button" class="quiz__option">런던</button>
-          <button type="button" class="quiz__option">레이캬비크</button>
-          <button type="button" class="quiz__option">더블린</button>
+          <!-- <button type="button" class="quiz__option">보기 1</button>
+          <button type="button" class="quiz__option">보기 2</button>
+          <button type="button" class="quiz__option">보기 3</button>
+          <button type="button" class="quiz__option">보기 4</button> -->
         </div>
-        <p class="quiz__feedback" aria-live="polite"></p>
-      </section>
+        <p class="quiz__feedback" aria-live="polite"></p>    
+      </div>
     </section>
 
     <section class="screen screen__done is-hidden" aria-label="종료 화면">
