--- a/week05/index.html
+++ b/week05/index.html
@@ -41,12 +41,7 @@
       </div>
       <div class="quiz__wrapper">
         <h2 class="quiz__question">퀴즈 질문</h2>
-        <div class="quiz__options">
-          <!-- <button type="button" class="quiz__option">보기 1</button>
-          <button type="button" class="quiz__option">보기 2</button>
-          <button type="button" class="quiz__option">보기 3</button>
-          <button type="button" class="quiz__option">보기 4</button> -->
-        </div>
+        <div class="quiz__options"></div>
         <p class="quiz__feedback" aria-live="polite"></p>    
       </div>
     </section>
