refactor: 퀴즈 데이터 분리 및 script.js 코드 정리

--- a/week05/index.html
+++ b/week05/index.html
@@ -13,6 +13,7 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
   <title>Pastimer | 10분의 기다림을 즐겁게</title>
+  <script defer src="/week05/src/script/quiz-data.js"></script>
   <script defer src="/week05/src/script.js"></script>
   <link rel="stylesheet" href="/week05/src/styles/style.css" />
 </head>
@@ -46,10 +47,10 @@
       </div>
     </section>
 
-    <section class="screen screen__done is-hidden" aria-label="종료 화면">
-      <h2 class="done__message">면을 건지러 가 볼까요? 🥢</h2>
-      <button type="button" class="done__restart-button">다시 시작하기</button>
-    </section>
+      <section class="screen screen__done is-hidden" aria-label="종료 화면">
+        <h2 class="done__message">면을 건지러 가 볼까요? 🥢</h2>
+        <button type="button" class="done__restart-button">다시 시작하기</button>
+      </section>
   </main>
 </body>
 </html>
